# Solver-app

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  pyo3-build-config.txt
.github/agents/: 协调者.agent.md  实现者a.agent.md  实现者b.agent.md  实现者c.agent.md  审查者.agent.md  评阅者.agent.md  质询者.agent.md
.token-pilot/: hook-events.jsonl
ast_read_file/.claude/: settings.json
ast_read_file/.token-pilot/: hook-events.jsonl
rust-libs/lua-runtime/: Cargo.toml
scripts/: 2026a_1.py  2026a_2(1).py  2026a_2(2).py  2026a_2(3).py  2026a_2(4f).py  2026a_2(4f-c).py  2026a_2(4f-d).py  2026a_2(addition).py  2026a_2.py  2026a_3.py  2026a_4(4f-d).py  2026a_4.py  a_2.py  addition.py  main.py  motion.py
src/: App.css  App.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cagro/: config.toml
src-tauri/capabilities/: default.json
src-tauri/plugins/titlebar/: Cargo.toml
src-tauri/plugins/titlebar/src/: commands.rs  lib.rs  windows_impl.rs
src-tauri/plugins/window_enhance/: Cargo.toml
src-tauri/plugins/window_enhance/src/: behaviors.rs  commands.rs  lib.rs  manager.rs  platform.rs  proc.rs  state.rs  subclass.rs  trait.rs  window_proc.rs
src-tauri/rupy-libs/shape3/: Cargo.toml
src-tauri/rust-libs/env-system/: Cargo.toml
src-tauri/rust-libs/env-system/src/: config.rs  dir.rs  global.rs  lib.rs  paths.rs  vfs_path.rs
src-tauri/rust-libs/error-system/: Cargo.toml
src-tauri/rust-libs/error-system/src/: lib.rs
src-tauri/rust-libs/event-system/: Cargo.toml
src-tauri/rust-libs/event-system/src/: lib.rs
src-tauri/rust-libs/init-system/: Cargo.toml
src-tauri/rust-libs/init-system/src/: lib.rs
src-tauri/rust-libs/log-system/: Cargo.toml
src-tauri/rust-libs/log-system/src/: handle.rs  lib.rs  logger.rs  message.rs  rotating_file.rs  worker.rs
src-tauri/rust-libs/log-system/tests/: deep_panic.rs  integration_test.rs  performance.rs  robustness.rs
src-tauri/rust-libs/lua-runtime/: Cargo.toml
src-tauri/rust-libs/lua-runtime/src/: lib.rs  vm.rs
src-tauri/rust-libs/mem-buffer/: Cargo.toml
src-tauri/rust-libs/mem-buffer/src/: lib.rs
src-tauri/rust-libs/python-bridge/: Cargo.toml
src-tauri/rust-libs/python-bridge/src/: lib.rs  sdk.rs
src-tauri/rust-libs/simple_motion/: Cargo.toml
src-tauri/rust-libs/simple_motion/src/: batch.rs  coordinate_system.rs  force_models.rs  lib.rs
src-tauri/rust-libs/simple_motion/tests/: text.rs
src-tauri/rust-libs/sol_evt_mgr/: Cargo.toml
src-tauri/rust-libs/sol_evt_mgr/src/: lib.rs
src-tauri/rust-libs/titlebar-system/: Cargo.toml
src-tauri/rust-libs/titlebar-system/src/: drag_tracker.rs  lib.rs  subclass.rs
src-tauri/rust-libs/utils/: Cargo.toml
src-tauri/rust-libs/utils/src/: lib.rs
src-tauri/rust-libs/vfs/: Cargo.toml
src-tauri/rust-libs/vfs/src/: lib.rs  pool.rs  query.rs  real_fs.rs  vfs_core.rs  vir_file.rs
src-tauri/src/: cli.rs  config.rs  lib.rs  main.rs
src-tauri/src-tauri/: Cargo.toml  Cargo.toml.bak
src-tauri/src-tauri/rust-libs/lua-runtime/: Cargo.toml
src-tauri/src-tauri/rust-libs/lua-runtime/src/: lib.rs
src-tauri/src-tauri/src/: cli.rs.bak  lib.rs  lib.rs.bak
src-tauri/src/services/: mod.rs  windowOps.rs
src-tauri/src/solvers/: greedy.rs  my_mst.rs
src/api/: config.ts  console.ts  events.ts  script.ts  vfs.ts
src/commands/: editorCommands.ts
src/components/: BarContext.tsx  ConfirmDialog.tsx  FilePicker.tsx  Loading.tsx  NewScriptDialog.tsx  Popover.tsx  ResultDetail.tsx  ResultHistoryItem.tsx  RunList.tsx  ShortcutHelp.tsx  TSPCanvas.tsx  TimelinePanel.tsx  Toast.tsx
src/hooks/: useSettings.tsx  useTabs.tsx  useToast.tsx  useWindow.tsx
src/layouts/: Footer.tsx  Header.tsx  Main.tsx  Nav.tsx  NavBar.tsx  ResourceView.tsx  Sidebar.module.css  Sidebar.tsx  Toolbar.tsx  WelcomeView.module.css  WelcomeView.tsx
src/pages/: EditorPage.tsx  Home.tsx  TSPSolver.tsx  VfsTestPage.tsx  ViewsPage.tsx
src/panels/: SettingPanel.module.css  SettingPanel.tsx
src/registry/: registry.ts  types.ts
src/renderers/: ConsoleRenderer.module.css  ConsoleRenderer.tsx  HtmlViewer.module.css  HtmlViewer.tsx  PythonEditor.module.css  PythonEditor.tsx  RunResult.tsx  TextViewer.module.css  TextViewer.tsx  useConsole.ts
src/services/: activeEditor.ts  commandService.ts
src/styles/: reset.css  tokens.css
src/utils/: icons.tsx
src/windows/: WindowManager.tsx
