[workspace]
members = ["rust-libs/python-bridge",'rust-libs/simple_motion', "rust-libs/utils"]

[package]
name = "solver"
version = "0.2.0"
description = "A problem visualizer and solver"
authors = ["you"]
edition = "2021"

[lib]
name = "solver_lib"
crate-type = ['staticlib', "cdylib", "rlib"]

[[bin]]
name = "solver"
path = "src/main.rs"

[profile.release-fast]
inherits = "release"

opt-level = 1

lto = "off"

codegen-units = 256

strip = "none"

panic = "unwind"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
pyo3 = { version = "0.28.3", features = ["auto-initialize"] }
tauri-plugin-dialog = "2"
nalgebra = "0.34.2"
pyo3-stub-gen = "0.22.1"
ndarray = "0.17.2"
burn = "0.20.1"
python-bridge = { version = "0.1.0", path = "rust-libs/python-bridge" }
tokio = "1.52.1"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[workspace.dependencies]
nalgebra = "0.34.2"
pyo3 = { version = "0.28.3", features = ["auto-initialize"] }
tokio = "1.52.1"
