[workspace]
members = ["rust-libs/error-system", "rust-libs/log-system", "rust-libs/python-bridge", "rust-libs/utils", "rust-libs/event-system", "rust-libs/env-system", "rust-libs/vfs", "rust-libs/init-system", "rust-libs/lua-runtime", "rust-libs/mem-buffer"]


[package]
name = "solver"
version = "0.2.0"
description = "A problem visualizer and solver"
authors = ["you"]
edition = "2021"

[lib]
name = "solver_lib"
crate-type = ['staticlib', "cdylib", "rlib"]

[[bin]]
name = "solver"
path = "src/main.rs"

[profile.release-fast]
inherits = "release"

opt-level = 1

lto = "off"

codegen-units = 256

strip = "none"

panic = "unwind"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pyo3 = { version = "0.28.3", features = ["auto-initialize"] }
tauri-plugin-dialog = "2"
nalgebra = "0.34.2"
python-bridge = { version = "0.1.0", path = "rust-libs/python-bridge" }
tokio = { version = "1.52.1", features = ["time"] }
log = "0.4.29"
anyhow = "1.0.102"
windows = { version = "0.62.2", features = ["Win32_UI_Input_KeyboardAndMouse"] }
crossbeam-channel = "0.5.15"
chrono = "0.4.44"
once_cell = "1.21.4"
thiserror = "2.0.18"
error-system = { path = "rust-libs/error-system" }
log-system = { path = "rust-libs/log-system" }
tauri-plugin-log = "2"
numpy = "0.28.0"
event-system = { version = "0.1.0", path = "rust-libs/event-system" }
utils = { version = "0.1.0", path = "rust-libs/utils"}
dirs = "6.0.0"
sha2 = "0.11.0"
hex = "0.4.3"
uuid = { version = "1", features = ["v4"] }
toml = "1.1.2"
r2d2 = "0.8.10"
r2d2_sqlite = "0.34"
dashmap = "6.1.0"
vfs = { version = "0.1.0", path = "rust-libs/vfs" }
tauri-plugin-window-enhance = { path = "plugins/window_enhance" }
env-system = { version = "0.1.0", path = "rust-libs/env-system" }
init-system = { path = "rust-libs/init-system" }
lua-runtime = { path = "rust-libs/lua-runtime" }
rusqlite = { version = "0.39.0", features = ["bundled"] }
[build-dependencies]
tauri-build = { version = "2", features = [] }

[workspace.dependencies]
nalgebra = "0.34.2"
pyo3 = { version = "0.28.3", features = ["auto-initialize"] }
tokio = "1.52.1"
chrono = "0.4.44"
crossbeam-channel = "0.5.15"
once_cell = "1.21.4"
log = "0.4.29"
thiserror = "2.0.18"
anyhow = "1.0.102"
numpy = "0.28.0"
tauri = { version = "2", features = [] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
r2d2_sqlite = "0.34"
sha2 = "0.11.0"
hex = "0.4.3"
toml = "1.1.2"
dirs = "6.0.0"
r2d2 = "0.8.10"
dashmap = "6.1.0"
rusqlite = { version = "0.39.0", features = ["bundled"] }
