[package]
name = "tauri-plugin-window-enhance"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]

[dependencies]
tauri = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
event-system = { path = "../../rust-libs/event-system" }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
] }
