[package]
name = "tauri-plugin-window-enhance"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["lib"]

[dependencies]
tauri = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
bitflags = "2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
] }
