[package]
name = "log-system"
version = "0.1.0"
edition = "2024"

[lib]
name = "log_system"
crate-type = ["lib", "cdylib"]

[dependencies]
log = { workspace = true }
crossbeam-channel = { workspace = true }
chrono = { workspace = true }
once_cell = { workspace = true }
tokio = { workspace = true }
tempfile = "3.27.0"
env-system = { version = "0.1.0", path = "../env-system" }
