[package]
name = "titlebar-system"
version = "0.1.0"
edition = "2024"

[dependencies]
windows = { version = "0.62.2", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
] }
tauri = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
